# Sistema_Caldeira

./: CMakeLists.txt  README.md  atuador_Na.c  atuador_Na.h  atuador_Nf.c  atuador_Ni.c  atuador_Ni.h  caldeira  main.c  referencia_H.c  referencia_H.h  referencia_T.c  referencia_T.h  sensor_T.c  sensor_Ta.h  sensor_Ti.c  sensores_T_No_H.txt  sensores_bufduplo.c  sensores_bufduplo.h  socket.c  socket.h  tela.c  tela.h  tempo_resp_h.txt  tempo_resp_h_bufduplo.c  tempo_resp_h_bufduplo.h  tempo_resp_t.txt  tempo_resp_t_bufduplo.c  tempo_resp_t_bufduplo.h
Atuadores/: atuador_Na.c  atuador_Nf.h  atuador_Ni.c
Sensores/: sensor_H.c  sensor_H.h  sensor_No.c  sensor_No.h  sensor_T.h  sensor_Ta.c  sensor_Ti.h
